# loom

./: .dockerignore  .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  clippy.toml  docker-compose.yml
crates/loom-core/: Cargo.toml
crates/loom-core/src/: agent.rs  cache.rs  content.rs  conversation.rs  deployment.rs  event.rs  lib.rs  message.rs  options.rs  pending_tool_call.rs  session.rs  usage.rs
crates/loom-core/src/cache/: hint.rs  mod.rs  negotiation.rs  ttl.rs
crates/loom-core/src/content/: citation.rs  content_part.rs  media_source.rs  mod.rs
crates/loom-core/src/conversation/: conversation.rs  mod.rs  provider_binding.rs
crates/loom-core/src/message/: message.rs  mod.rs  role.rs
crates/loom-core/src/options/: conversation_options.rs  mcp_server_ref.rs  mod.rs  server_tool.rs  tool_definition.rs
crates/loom-core/tests/: cache_roundtrip.rs  content_part_roundtrip.rs  conversation_options_roundtrip.rs  conversation_roundtrip.rs  lossless_fixture.rs  mcp_server_ref_roundtrip.rs  message_roundtrip.rs  roundtrip.rs  usage_roundtrip.rs
crates/loom-core/tests/common/: mod.rs
crates/loom-core/tests/fixtures/: anthropic_message.json
crates/loom-provider/: Cargo.toml
crates/loom-provider-anthropic/: Cargo.toml
crates/loom-provider-anthropic/src/: batch.rs  catalogue.rs  lib.rs  provider.rs  streaming.rs  translate.rs
crates/loom-provider-anthropic/src/batch/: counts.rs  mod.rs  provider_ext.rs  request.rs  result.rs  snapshot.rs
crates/loom-provider-anthropic/src/catalogue/: beta.rs  mod.rs
crates/loom-provider-anthropic/src/provider/: batch_http.rs  cache_negotiation.rs  mod.rs  (+5 more)
crates/loom-provider-anthropic/tests/: batch.rs  client.rs  streaming.rs  translate.rs
crates/loom-provider/src/: adapter.rs  capability.rs  error.rs  event.rs  lib.rs  mock.rs  provider.rs  registry.rs
crates/loom-server/: Cargo.toml
crates/loom-server/examples/: dump_openapi.rs
crates/loom-server/src/: admin.rs  auth.rs  batch.rs  budget.rs  config.rs  crypto.rs  error.rs  extract.rs  keys.rs  lib.rs  main.rs  provider.rs  rate_limit.rs  state.rs  telemetry.rs  usage.rs  v1.rs
crates/loom-server/tests/: auth.rs  batches.rs  budgets.rs  conversations.rs  stream_disconnect.rs  telemetry.rs  turn_latency_bench.rs  usage.rs
crates/loom-store/: Cargo.toml
crates/loom-store/.sqlx/: query-018b4530a3078ce7a75fd191de9733384e27c3c9891d68171ac3e1acfeca6238.json  query-0206f01ed3b596bf740b4f4a6f7d57189e5d8270dd2bf7e1ac35cacfaa71dd10.json  query-043185b35187fa528d63fb06d07159d44bf9167723e43e739a9412689a19d70a.json  query-07d7040e2af0b9a48644ae274d1582d7c7fe0f02b5bb6edf196388911323e9a6.json  query-0a84bdcdb49f936e6527f325019683e7b612cd07258a9de54a10c934de5b18b2.json  query-0bce76cd9d55c97543db1278d7c168787f6cc67a7be9a39f50f7ae4164d835bc.json  query-0d98c380dfa3b63f6c9b9b9fa7330ed4799f5b30e0a87a5e87f9ce06730aeb44.json  query-0dd2a382408783c9d18362225f5758127ae5a04d71ce2330866982a6eb1c2806.json  query-0eaa5d418d76b4e0c0f5c5550e9375e20d661bcd19767ba362832c11c82632f9.json  query-1125b777843b65ed4b890e96edd2bf7307cb9649cb630c6c2473f1535365d6ee.json  query-112ea16d8fe7717a8fe9480b57b45b7d98ae0393a7024222d3cf7b163aa84cfe.json  query-1413d00b2e7e2873c60391611ee10f5011caff54e7040d7d6b82019945863a34.json  query-153715c14bc14599ad90e4d704cf0011a39a1e99d48bf788974c4fef4226c477.json  query-157f173b759083e235c64dceac85c829c0bf1f0b0e5ba0fd895c92872fae890a.json  query-1ab821336f452ad1f0c35234a3b8079f642bc21c93a8e16b2ae4644031b64b8d.json  query-1e7e78e44ec0e33e29ad89f854268901adfa9509973d80d20376c6617f2e39a4.json  query-1fff6c584ef95e995cabff13c2cd63805c65e5e78af50012ffd2653702debb3b.json  query-20fc98dff4c6038b042983144401908114aa37204ea04caa1488ab3f584469ec.json  query-23f904e359a9ef790117966327cb00601672c628303e9cb55bd87797ae6e530b.json  query-259830379f0e5b01dbb4490ba1b275c501d8d734c123746ae53cc229bb292a6c.json  query-28765d856c93e1691bde51e2107a30c94564ae69255aa60e63cebbb1357fcd24.json  query-289f36f384b6a49217a21ae932e59a5b0a32fad394fbe53ff1f571b87aaedf65.json  query-30201b768a95b83e7443c4a96374e4a4996e6e1e64c6433c029d463d7425ca4f.json  query-36266320a53c2e5745d4a51dcbe3261362b06ad3158a4a0bbee3fefa508051d9.json  query-4272fc3691ff3df7a93e52d9a08117f34eccae0ff756937ff11c3d975034fc0c.json  query-44dd2b2e90f1fc35a1effe310b5c906ed56fe33290c4dfc79025e88a3617cb95.json  query-462dacf87a140db62b8c1de531ce614a86886529f16b8acc7f34afeb948c5730.json  query-48d4fc21ff9c9f29ee46a8f2d1e5099934c67ba15f5f2a1bc0e42ae0d3641791.json  query-4b8abb26c8b2d1e572d57b20a8f974a77f475bd9745684ae6d8d8362cfd54c4a.json  query-4d92cb5a688928e30ed166334e3b8a9323138e76a0aa3d18fc55d7a12a8649d8.json  query-5394c05cb2339aedc03d9624fb77304d02d607f170eeca04df92d2ff0a9a02a8.json  query-5703d487d1167c00060356d6585001106705845d26450116232c9a2cd99a340c.json  query-59bc90fd384f4696ed6b2fb40ed2902dc8204f4f0d874016ee258061218dae97.json  query-5dcff776e858cc4f0a4bf41cdc34a305072af2cae20c4ed73a1de6666fdf2411.json  query-5f419c84fcaba001f1e0ad417536e5768d809bf0fd582dd04e2e9783fa6916ee.json  query-5f7d9e91b2ced2958fe9c15f6d6f7a48580c2ecc38554b474f4aeb896ea95e34.json  query-62fdbd0b2c924c02d00d8828cfe7369c5b49f88522038b3401031c66de3dd1f2.json  query-63c081e6830fec273efc48b4e09b66ef6e6bb17480550f5f62bfc023f2ea22a0.json  query-63cd2f3b51ede7784dcd7eabd627148185c83300d661e54b502be7f845585fe5.json  query-66a0aab45e657ef99bffb5d97b7d0d25a4d2ade9f3607049726f59fb6e3c8af2.json  (+60 more)
crates/loom-store/migrations/: 20260704000000_initial.sql  20260705000000_pricing_and_outbox.sql  20260706000000_budgets_and_rate_limits.sql  20260707000000_mcp_servers.sql  20260708000000_batches.sql  20260709000000_sessions.sql  20260710000000_agent_definitions.sql  20260711000000_session_events.sql  20260712000000_pending_tool_calls.sql
crates/loom-store/src/: error.rs  lib.rs  model.rs  pg.rs  pricing.rs  store.rs
crates/loom-store/tests/: agent.rs  batch.rs  budget.rs  conversation.rs  credentials.rs  integration.rs  keys.rs  mcp.rs  outbox.rs  pending_tool_call.rs  pricing.rs  session.rs  session_event.rs  tenant.rs  usage.rs
(+373 files in other folders)
