[workspace]
resolver = "2"
members = [
    "crates/loom-core",
    "crates/loom-provider",
    "crates/loom-provider-anthropic",
    "crates/loom-store",
    "crates/loom-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/fieldstatenz/loom"
authors = ["Fieldstate <hello@fieldstate.nz>"]

# Centralised dependency versions (governance lives here; member crates opt in
# with `dep = { workspace = true }` and pick their own feature sets).
[workspace.dependencies]
# --- serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# --- async runtime / traits ---
tokio = "1"
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
bytes = "1"
# --- http server ---
axum = "0.8"
tower = "0.5"
tower-http = "0.6"
http = "1"
# --- http client ---
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
# --- persistence ---
sqlx = "0.8"
# --- errors / util ---
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
# --- observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# OpenTelemetry: a version-lockstep set. `opentelemetry`, `opentelemetry_sdk`,
# `opentelemetry-otlp` and `opentelemetry-semantic-conventions` move together on
# the same minor; `tracing-opentelemetry` tracks them one minor ahead. Bump all
# five together or the trait bounds between them stop lining up.
opentelemetry = "0.32"
opentelemetry_sdk = "0.32"
opentelemetry-otlp = "0.32"
opentelemetry-semantic-conventions = "0.32"
tracing-opentelemetry = "0.33"
# --- openapi ---
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
# --- crypto / secrets ---
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
subtle = "2"
# --- internal crates ---
loom-core = { path = "crates/loom-core" }
loom-provider = { path = "crates/loom-provider" }
loom-provider-anthropic = { path = "crates/loom-provider-anthropic" }
loom-store = { path = "crates/loom-store" }

# --- dev / test ---
[workspace.dependencies.testcontainers]
version = "0.23"

[workspace.dependencies.testcontainers-modules]
version = "0.11"
features = ["postgres"]

[workspace.dependencies.wiremock]
version = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
