[package]
name = "loom-provider-anthropic"
description = "Anthropic provider for Loom: Messages API translation, streaming, caching, server tools, MCP, batches."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
loom-core = { workspace = true }
loom-provider = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
wiremock = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
