[package]
name = "loom-provider"
description = "Loom provider plugin trait, capability model and streaming envelope."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
loom-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
utoipa = { workspace = true, optional = true }

[features]
# Exposes `MockProvider`, a canned in-memory provider that downstream crates
# (e.g. the server) can use in their own tests without a live provider backend.
mock = []
# Feature-gated `utoipa::ToSchema` derives on the streaming envelope, mirroring
# `loom-core`'s `openapi` feature (which this one turns on in turn, since
# `TurnEventKind` embeds `loom_core::ContentPart`/`Usage`).
openapi = ["dep:utoipa", "loom-core/openapi"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
uuid = { workspace = true }
