[package]
name = "loom-server"
description = "The Loom HTTP gateway: /v1 conversation API, auth, budgets, usage rollups, OpenAPI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "loom-server"

[dependencies]
loom-core = { workspace = true }
loom-provider = { workspace = true }
loom-provider-anthropic = { workspace = true }
loom-store = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
