[package]
name = "loom-server"
description = "The Loom HTTP gateway: /v1 conversation API, auth, budgets, usage rollups, OpenAPI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "loom-server"

[lib]
name = "loom_server"
path = "src/lib.rs"

[[bin]]
name = "loom-server"
path = "src/main.rs"

[dependencies]
loom-core = { workspace = true }
loom-provider = { workspace = true }
loom-provider-anthropic = { workspace = true }
loom-store = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
http = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
utoipa = { workspace = true }

sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres"] }

# --- crypto / secrets ---
aes-gcm = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
futures = { workspace = true }
loom-provider = { workspace = true, features = ["mock"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
wiremock = { workspace = true }
