[package]
name = "loom-server"
description = "The Loom HTTP gateway: /v1 conversation API, auth, budgets, usage rollups, OpenAPI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "loom-server"

[lib]
name = "loom_server"
path = "src/lib.rs"

[[bin]]
name = "loom-server"
path = "src/main.rs"

[dependencies]
loom-core = { workspace = true }
loom-provider = { workspace = true }
loom-provider-anthropic = { workspace = true }
loom-store = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# --- opentelemetry (opt-in OTLP export of traces + metrics) ---
opentelemetry = { workspace = true, features = ["trace", "metrics"] }
opentelemetry_sdk = { workspace = true, features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = [
    "grpc-tonic",
    "http-proto",
    "reqwest-client",
    "reqwest-rustls",
    "trace",
    "metrics",
] }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
utoipa = { workspace = true }

sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres"] }

# --- crypto / secrets ---
aes-gcm = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
futures = { workspace = true }
loom-provider = { workspace = true, features = ["mock"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
wiremock = { workspace = true }
# In-memory span/metric exporters for asserting telemetry without a collector.
opentelemetry_sdk = { workspace = true, features = ["trace", "metrics", "rt-tokio", "testing"] }
tracing-subscriber = { workspace = true }
