[package]
name = "loom-store"
description = "Loom persistence layer: PostgreSQL schema, migrations and typed store traits."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
loom-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
